--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sysmetrics"
+name = "sysmon"
 version = "0.1.0"
 authors = ["John-John Tedro <udoprog@tedro.se>"]
 license = "Apache 2.0"
@@ -9,12 +9,21 @@ getopts = "*"
 histogram = "*"
 log = "*"
 num = "*"
-rustc-serialize = "0.3.19"
+serde = "0.8.20"
+serde_derive = "0.8.20"
 time = "*"
-toml = "0.1"
+futures = "*"
+futures-cpupool = "*"
+tokio-timer = { git = "https://github.com/tokio-rs/tokio-timer" }
+nom = "^2.0"
 
-[dependencies.hyper]
-version = "^0.9.6"
+[dependencies.toml]
+version = "0.2.1"
+default-features = false
+features = ["serde"]
+
+[dependencies.reqwest]
+version = "*"
 optional = true
 
 [dependencies.notify]
@@ -23,5 +32,5 @@ optional = true
 
 [features]
 default = ["http", "watch"]
-http = ["hyper"]
+http = ["reqwest"]
 watch = ["notify"]
