--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ futures = "*"
 futures-cpupool = "*"
 tokio-timer = { git = "https://github.com/tokio-rs/tokio-timer" }
 nom = "^2.0"
+error-chain = "^0.7"
 
 [dependencies.toml]
 version = "0.2.1"
