--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ num = "*"
 serde = "0.8.20"
 serde_derive = "0.8.20"
 time = "*"
-futures = "*"
-futures-cpupool = "*"
+futures = { git = "https://github.com/alexcrichton/futures-rs" }
+futures-cpupool = { git = "https://github.com/alexcrichton/futures-rs" }
 tokio-timer = { git = "https://github.com/tokio-rs/tokio-timer" }
 nom = "^2.0"
 error-chain = "^0.7"
