--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ tokio-timer = { git = "https://github.com/tokio-rs/tokio-timer" }
 tokio-signal = "*"
 nom = "^2.0"
 error-chain = "^0.7"
+num_cpus = "1.2.0"
 
 [dependencies.toml]
 version = "0.2.1"
