Output information over snoop socket

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ log = "*"
 num = "*"
 serde = "0.8.20"
 serde_derive = "0.8.20"
+serde_json = "0.8"
 time = "*"
 futures = "*"
 futures-cpupool = "*"
