[all] upgrade codebase

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ license = "Apache 2.0"
 getopts = "*"
 histogram = "*"
 log = "*"
+env_logger = "*"
 num = "*"
 serde = "0.8.20"
 serde_derive = "0.8.20"
@@ -15,9 +16,10 @@ serde_json = "0.8"
 time = "*"
 futures = "*"
 futures-cpupool = "*"
-tokio-core = "0.1.2"
-tokio-timer = { git = "https://github.com/tokio-rs/tokio-timer" }
-tokio-signal = "*"
+tokio-core = "0.1"
+tokio-io = "0.1"
+tokio-timer = "0.1"
+tokio-signal = "0.1"
 nom = "^2.0"
 error-chain = "^0.7"
 num_cpus = "1.2.0"
